...
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/TextPlayer1Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text=""
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextPlayer2Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
...
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/currPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
...
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">


            <Button
                android:id="@+id/buttonCol1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/arrow"
                android:onClick="selectColumn"
                android:text="0"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/buttonCol2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/buttonCol1"
                android:layout_toRightOf="@id/buttonCol1"
                android:background="@drawable/arrow"
                android:onClick="selectColumn"
                android:text="1"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/buttonCol3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/buttonCol2"
                android:layout_toRightOf="@id/buttonCol2"
                android:background="@drawable/arrow"
                android:onClick="selectColumn"
                android:text="2"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/buttonCol4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/buttonCol3"
                android:layout_toRightOf="@id/buttonCol3"
                android:background="@drawable/arrow"
...
                android:background="@drawable/arrow"
                android:onClick="selectColumn"
                android:text="4"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/buttonCol6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/buttonCol5"
                android:layout_toRightOf="@id/buttonCol5"
                android:background="@drawable/arrow"
                android:onClick="selectColumn"
                android:text="5"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/buttonCol7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/buttonCol6"
                android:layout_toRightOf="@id/buttonCol6"
                android:background="@drawable/arrow"
...
