<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_players_names"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="54dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editPlayer1"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_player_1_s_name"
            android:inputType="textAutoComplete|textPersonName"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editPlayer2"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_player_2_s_name"
            android:inputType="textPersonName"
            android:textColor="@color/yellow" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/start"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>