<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/leaderboard"
        android:enabled="true"
        android:orderInCategory="102"
        android:title="Leaderboard"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu"
        android:enabled="true"
        android:orderInCategory="200"
        android:title="Main Menu"
        android:visible="true"
        app:showAsAction="always" />



</menu>