<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:gravity="center_vertical|center"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id = "@+id/Winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:textSize="36sp"
        android:textStyle="bold"
        />

</LinearLayout>